--- a/youtube-videos/requirements.txt
+++ b/youtube-videos/requirements.txt
@@ -1,8 +1,12 @@
 autopep8==1.6.0
+certifi==2022.6.15
+charset-normalizer==2.1.1
 click==8.1.3
 flake8==4.0.1
+idna==3.3
 mccabe==0.6.1
 pycodestyle==2.8.0
 pyflakes==2.4.0
 pytube==12.1.0
 toml==0.10.2
+urllib3==1.26.11
