--- a/youtube-videos/requirements.txt
+++ b/youtube-videos/requirements.txt
@@ -2,9 +2,11 @@ autopep8==1.6.0
 certifi==2022.6.15
 charset-normalizer==2.1.1
 click==8.1.3
+deepdiff==5.8.1
 flake8==4.0.1
 idna==3.3
 mccabe==0.6.1
+ordered-set==4.1.0
 pycodestyle==2.8.0
 pyflakes==2.4.0
 pytube==12.1.0
